kubernetes/system/wordpress/deployment.yaml
# Deployment delivers WordPress pods onto EC2 machines located in EKS private subnet.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
      app.kubernetes.io/name: wordpress
  template:
    metadata:
      labels:
        app: wordpress
        app.kubernetes.io/name: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:latest
          ports:
            - containerPort: 80
