kubernetes/system/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    name: wordpress
spec:
  selector:
    app: wordpress
    app.kubernetes.io/name: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
